apps/linkding/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
  labels:
    app: linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      containers:
        - name: linkding
          image: ghcr.io/sissbruecker/linkding:1.45.0-alpine
          ports:
            - containerPort: 9090
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              memory: "256Mi"
    #    affinity:
    #      nodeAffinity:
    #        preferredDuringSchedulingIgnoredDuringExecution:
    #          - weight: 100
    #            preference:
    #              matchExpressions:
    #                - key: node-role.kubernetes.io/worker
    #                  operator: In
    #                  values:
    #                    - "true"
