apps/linkding/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding-svc
  labels:
    app: linkding
spec:
  type: ClusterIP
  selector:
    app: linkding
  ports:
    - port: 80
      targetPort: 9090
