apps/linkding/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding-ingress
spec:
  defaultBackend:
    service:
      name: linkding-svc
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - linkding
